--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="footer">
             <div class="images">
                 <a href="https://wa.me/message/NALROIS2FWFXO1"><img src="whatsapp.png" alt=""></a>
-                <a href="https://www.instagram.com/rajkumar005737/?igsh=MTd3bnVxdXg4MG16Mg%3D%3D"><img src="instagram.png" alt=""></a>
+                <a href="https://www.instagram.com/rajkumar80985/?igsh=MW5xa2l6enRtNTdn"><img src="instagram.png" alt=""></a>
                 <a href="https://www.facebook.com/profile.php?id=61557240637669&mibextid=ZbWKwL"><img src="facebook.png" alt=""></a>
                 <a href="https://t.me/Rajkumarhemnath"><img src="telegram 1.png" alt=""></a>
             </div>
