--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="footer">
             <div class="images">
-                <a href="https://wa.me/message/NALROIS2FWFXO1"><img src="whatsapp.png" alt=""></a>
+                <a href="https://api.whatsapp.com/message/PIEEKBFSC2FFK1?autoload=1&app_absent=0"><img src="whatsapp.png" alt=""></a>
                 <a href="https://www.instagram.com/rajkumar80985/?igsh=MW5xa2l6enRtNTdn"><img src="instagram.png" alt=""></a>
                 <a href="https://www.facebook.com/profile.php?id=61557240637669&mibextid=ZbWKwL"><img src="facebook.png" alt=""></a>
                 <a href="https://t.me/Rajkumarhemnath"><img src="telegram 1.png" alt=""></a>
