--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="logo">
                     <img src="telephone-call 2call.png">
                 </div>
-                <h1>7806983260</h1>
+                     <a href=""><h1>7806983260</h1></a>
             </div>
         </div>
         <div class="content">
