--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="logo">
                     <img src="telephone-call 2call.png">
                 </div>
-                     <a href="6379068632"><h1>6379068632</h1></a>
+                     <a href="tel:6379068632"><h1>6379068632</h1></a>
             </div>
         </div>
         <div class="content">
