--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <img src="telephone-call 2call.png">
                 </div>
                      <a href="tel:6379068632"><h1>6379068632</h1></a>
+                <a href="https://wa.me/message/PIEEKBFSC2FFK1"><img src="whatsapp.png" alt=""><h1>6379068632</h1></a>
             </div>
         </div>
         <div class="content">
