--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="header">
             <div class="left-container">
                 <div class="logo">
-                    <img src="Mask grouplogo.png">
+                    <img src="logo.png">
                 </div>
                 <h1>காளிஜோதிடர்</h1>
             </div>
@@ -20,9 +20,9 @@
             <div class="right-container">
                 <div class="logo">
                     <img src="telephone-call 2call.png">
+                    <img src="whatsapp 3whatsapp.png" alt="">
                 </div>
                      <a href="tel:6379068632"><h1>6379068632</h1></a>
-                <a href="https://wa.me/message/PIEEKBFSC2FFK1"><img src="whatsapp.png" alt=""><h1>6379068632</h1></a>
             </div>
         </div>
         <div class="content">
