--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="right-container">
                 <div class="logo">
                     <img src="telephone-call 2call.png">
-                    <img src="whatsapp 3whatsapp.png" alt="">
+                    <img src="whatsapp 3whatsapp.png">
                 </div>
                      <a href="tel:6379068632"><h1>6379068632</h1></a>
             </div>
